Major changes
- deleted jit cache
- OOM fixed with low memory args on large projects by streaming index
parsing
- removed ap processing
- fixed issues with index limited parsing on multi modules
- fixed issues with gradle module building
- fixed issues with maven module building
- fixed warm context kept resetting on multi modules
- added more lombok injections e.g. superbuilder, builder etc
- fixed external index not closing
- changed lsp reading incoming request with byte streaming
- fixed orphaned java processes still running after exiting
- fixed navigation not working on try with resources and binding
variables
- fixed race condition with index scheduling on bootstrap/merge
- fixed filestore content hash unnecessary revision changes
- fixed anonymous findnameat not handling it
- added lombok.config detection
- updated Parser to use -proc:none
.. and a bunch more